@@ -24,4 +24,3 @@ Depends:
 Collate:
     'Contributed.R'
     'Rfunctions.R'
-    'patteRns.R'
