@@ -1,4 +1,5 @@
 S3method(as.data.frame,by)
+S3method(merge,list)
 S3method(shift,data.frame)
 S3method(shift,default)
 S3method(sort,data.frame)
@@ -45,7 +46,6 @@ export(sort.data.frame)
 export(splitDF)
 export(splitc)
 export(stack.list)
-export(subset.patteRns)
 export(title.page.new)
 export(trues)
 export(unsplitDF)
