@@ -1,13 +1,0 @@
-# Design principles:
-# - Patterns are ordered by approximate specificity
-
-#'Determine which patterns a character vector utilizes
-#'@aliases subset.patteRns
-#'@param x An object of class patteRns
-#'@param ch The character vector to examine
-#'@param \dots Ignored
-#'@return A patteRns object containing the matching patterns
-#'@export subset.patteRns
-subset.patteRns <- function(x,ch,...) {
-  
-}
