@@ -29,3 +29,4 @@ Change log version 1.0.3 to 1.0.4
 Change log version 1.0.4 to 1.0.5
 
 - Changed default on destring() so it handles negative values
+- Added merge.list() to merge generic lists
